Cambios generales de interfaz

--- a/InsertarClienteDAPPER/App.config
+++ b/InsertarClienteDAPPER/App.config
@@ -3,13 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-
-	<connectionStrings>
-		<add name="NWConnectionString"
-	   connectionString="Data Source=CC1PC38-39;Initial Catalog=Northwind;Integrated 
-	   Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;
-	   ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+<connectionStrings>
+		<add name="NWConnection"
+			 connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Northwind;Integrated Security=True;"
 			 providerName="System.Data.SqlClient"
-	  />
+			/>
 	</connectionStrings>
 </configuration>
